fixed alignment of tech skills

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,3 @@
-.badge-container{
-  text-align: center;
-}
 .badge-container ul{
   list-style: none;
   padding: 0;
